[package]
name = "bevy_obj"
version = "0.1.0"
authors = ["Csányi István <csanyistvan02@gmail.com>"]
edition = "2018"

[dependencies]
bevy_app = { package = "bevy_app", git = "https://github.com/bevyengine/bevy", branch = "master" }
bevy_asset = { package = "bevy_asset", git = "https://github.com/bevyengine/bevy", branch = "master" }
bevy_render = { package = "bevy_render", git = "https://github.com/bevyengine/bevy", branch = "master" }
anyhow = "1.0"
thiserror = "1.0"
obj-rs = { version = "0.6", default-features = false }